# my-python-app

./: .gitignore  ANALISIS_FORMATO_ESTILO.md  FEDE_v3_REVISION_FINAL_81seg.json  LICENSE  PLAN_TECNICO_COMPLETO.md  README.md  agregar_clicks_arrizzo8.py  agregar_clicks_clip1_serge.py  agregar_clicks_clip2_fantastica.py  agregar_clicks_x55_II.py  agregar_clicks_x55_plus_urg.py  aplicar_cambios_al_draft_real.py  aplicar_cambios_maria.py  app.py  arreglo_offset_y_limpieza_nativo.patch  arreglo_posiciones_amontonadas.patch  arreglo_sombra_y_fuente.patch  arreglos_subtilearn.patch  corregir_v3.py  cortar_4_clips.py  diagnostico_maria.py  draft_content_MARIA_NUEVO.json  draft_content_MARIA_REORDENADO.json  draft_content_NUEVO.json  draft_content_V3_NUEVO.json  draft_original.json  fix_alineacion_y_reservamos.patch  fix_draftmanager_maria.patch  fix_maria_completo.patch  fix_offset_segmento.patch  fix_posicionamiento_maria.patch  generar_arrizzo8.py  generar_subtitulos_baic_v5.py  generar_subtitulos_maria.py  limpiar_maria.py  limpiar_tracks_subtitulos.py  limpieza_archivos_basura.patch  maria_actual.json  maria_v2_con_ediciones.json  mejoras_ui_autosuficiente.patch  (+8 more)
assets/: README.md
config/: __init__.py  default_profile.json  settings.json  user_profile.json
core/: __init__.py  capcut_engine.py  cleaner.py  click_engine.py  division.py  draft_manager.py  exceptions.py  json_patcher.py  learning_engine.py  logger.py  subtitle_engine.py  velocidad.py
docs/: MEJORAS_APLICADAS.md
services/: __init__.py  draft_service.py
tests/: test_autosuficiencia.py  test_division.py  (+6 more)
(+19 files in other folders)
