[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-python-app"
version = "0.1.0"
description = "Herramienta de automatización de subtítulos karaoke para CapCut"
requires-python = ">=3.11"
dependencies = [
    "customtkinter==5.2.0",
    "Pillow==10.1.0",
    "pycapcut==0.1.0",
    "jsonschema==4.23.0",
    "psutil==6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-mock==3.14.0",
    "black==24.8.0",
    "ruff==0.6.8",
    "mypy==1.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
